--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="#{location}">Location</title>
+    <title th:text="#{home}">Home</title>
     <!-- Bootstrap CSS -->
     <!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!-- Custom styles -->
     <link rel="stylesheet" href="/style/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="icon" type="images/x-icon" href="/images/location.icon.png" >
+    <link rel="icon" type="images/x-icon" href="/images/home.icon.png" >
+
 </head>
 
-<body class="body">
+<body>
 
 
 <!-- Navigation -->
@@ -57,68 +58,18 @@
 <section class="main-content container-fluid">
 
     <!--        Header image-->
-    <section class="content-top container-fluid">
-
-        <div class="header container-sm mt-3">
-            <div class="row">
-                <div class="col">
-                    <a href="/" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{about}">About</a>
-                </div>
-                <div class="col">
-                    <a href="/attractions" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{attractions}">Attractions</a>
-                </div>
-                <div class="col">
-                    <a href="/services" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{services}">Services</a>
-                </div>
-
-                <div class="col">
-                    <a href="/location" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{location}">Location</a>
-                </div>
-
-                <div class="col">
-                    <a href="/pricing" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
-                </div>
-                <div class="col">
-                    <a href="/photos" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{photos}">Photos</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="about container-sm mt-3">
-
-        <div class="row">
-
-
-            <div class="custom-card mb-3">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="/images/location.jpg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Локация:</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="row mt-4" >
+        <div class="col">
+            <a href="/admin/add" class="btn btn-success" aria-current="page" th:text="#{add.reservation}">Add Reservation</a>
         </div>
 
-        <div class="row">
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    </div>
 
-            <a href="https://www.google.com/maps/dir//42.4397503,27.5822291/@42.4395177,27.5820601,19z/data=!4m2!4m1!3e0?hl=bg&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D"
-               class="btn btn-primary mt-2" target="_blank">
-                <i class="bi bi-geo-alt-fill" th:text="#{navigate.with.google.maps}"></i>
-            </a>
-
+    <div class="row mt-2">
+        <div class="col">
+            <a href="/admin/remove" class="btn btn-danger" aria-current="page" th:text="#{remove.reservation}">Remove Reservation</a>
         </div>
-
-    </section>
-
-
-
+    </div>
 
 
 </section>
