--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -11,6 +11,7 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="/style/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" type="images/x-icon" href="/images/attractions.icon.png" >
 </head>
 
 <body class="body">
