--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -71,6 +71,22 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="container">
+            <div class="calendar row">
+                <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
+                    <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
+                    <br/>
+
+                    <div class="day" th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
+                         th:text="${day}"
+                         th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </section>
 
