added some documentation

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -86,10 +86,10 @@
             </div>
         </section>
 
-        <section class="about container-sm mt-3">
+        <section class="about container-sm mt-3 mb-3">
 
 
-            <div class="custom-card mb-3">
+            <div class="custom-card">
                 <div class="row g-0">
                     <div class="col-xl-8 col-lg-8 col-md-12 mt-4 mb-4">
                         <div class="card-body">
