--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -85,7 +85,7 @@
         </div>
     </section>
 
-    <section class="about container-sm mt-3">
+    <section class="about container-sm mt-3 mb-3">
 
         <div class="row">
 
