--- a/src/main/resources/templates/pricing_and_availability.html
+++ b/src/main/resources/templates/pricing_and_availability.html
@@ -86,7 +86,7 @@
         </div>
     </section>
 
-    <section class="about container-sm mt-3">
+    <section class="about container-sm mt-3 mb-3">
 
 
         <div class="row">
@@ -100,7 +100,7 @@
 
 
 
-        <div class="row">
+        <div class="row ">
             <div class="container">
                 <div class="calendar row">
                     <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
