--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -85,7 +85,7 @@
         </div>
     </section>
 
-    <section class="about container-sm mt-3">
+    <section class="about container-sm mt-3 mb-3">
 
 
         <div class="row">
@@ -102,7 +102,7 @@
 
 
         <div class="row">
-            <div class="custom-card mb-3">
+            <div class="custom-card">
                 <div class="card-body">
                     <div class="container-fluid">
                         <div class="row">
