--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -84,9 +84,9 @@
         </div>
     </section>
 
-    <section class="about container-sm mt-3">
+    <section class="about container-sm mt-3 mb-3">
 
-        <div class="row">
+        <div class="row ">
 
             <div class="custom-card mb-3">
                 <div class="card-body">
