--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,11 +40,12 @@
                 </li>
                 <li class="nav-item dropdown ms-3">
                     <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        🌐 BG
+                        🌐
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="?lang=bg">🇧🇬 Български</a></li>
                         <li><a class="dropdown-item" href="?lang=en">🇬🇧 English</a></li>
+                        <li><a class="dropdown-item" href="?lang=ru">🇷🇺 Русский</a></li>
                     </ul>
                 </li>
 
