added some styles

--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -108,7 +108,7 @@
                         внасяне на нехарактерни за района растителни и животински видове;
                         паша на домашни животни.[1]</p>
                 </div>
-                <img src="/images/bakurluk.png" class="card-img-bottom" height="200" alt="...">
+                <img src="/images/bakurluk.png" class="card-img-bottom mb-3" height="200" alt="...">
             </div>
         </div>
 
