--- a/src/main/resources/static/style/home.css
+++ b/src/main/resources/static/style/home.css
@@ -1,9 +1,22 @@
+html, body {
+  height: 100vh;         /* 100% of the visible viewport height */
+  margin: 0;
+  padding: 0;
+}
+
 
 body {
-background-color: #ffffd3;
-background-image: url("/images/background.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  background-image: url("/images/background.jpg");
+  background-size: cover;               /* or 100% 100%, if you prefer stretch */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;         /* optional, remove on mobile if it stutters */
 }
+
+.main-content {
+  min-height: 100vh;
+}
+
 
 .equal-img {
   width: 100%;
@@ -17,8 +30,7 @@ background-image: url("/images/background.png");
             border-radius: 20px;
             overflow: hidden;
             color: #fff;
-            background-image: url("/images/background.png");
-            background-color: #ffffd3;
+            background-image: url("/images/card-background.jpg");
             background-blend-mode: overlay;
             background-size: cover;
             background-repeat: no-repeat;
@@ -42,14 +54,14 @@ background-image: url("/images/background.png");
     }
 
     .card-title {
-        font-size: 1.2rem;
+        font-size: 1.8rem;
         font-weight: 600;
-        color: #343a40;
+        color: #253b6b;
     }
 
     .card-text {
-        font-size: 0.95rem;
-        color: #6c757d;
+        font-size: 0.8rem;
+        color: black;
     }
 
 
@@ -92,14 +104,14 @@ background-image: url("/images/background.png");
 .content-top .header .col a:focus {
   background-color: #ffec99;
   color: #000;
-  border-color: #d4c45e;
+  border-color: #253b6c;
   box-shadow: 0 4px 10px rgb(0 0 0 / 0.15);
   outline: none;
 }
 
 .content-top .header .col a[aria-current="page"] {
-  background-color: #ffffd3;
-  color: #fff;
+  background-color:  #7caae4;
+  color: #253b6b;
   box-shadow: 0 4px 12px rgb(0 0 0 / 0.2);
 }
 
@@ -124,8 +136,8 @@ background-image: url("/images/background.png");
 
 /////////////////calendar
 
-.calendar { display: flex; flex-wrap: wrap; gap: 2rem;}
-.month { border: 1px solid #ccc; padding: 1rem; width: 250px; }
+.calendar { display: flex; flex-wrap: wrap; gap: 2rem; }
+.month { padding: 1rem; width: 250px; color: 253b6b;}
 .day { display: inline-block; width: 30px; height: 30px; text-align: center; margin: 2px; }
 .reserved { background-color: red; color: white; }
 
