--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="row mb-3">
+    <div class="row mt-3 mb-3">
         <div class="container">
             <div class="calendar row">
                 <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
