--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body class="body">
 
 
 <!-- Navigation -->
@@ -92,20 +92,19 @@
 
             <div class="custom-card">
                 <div class="row g-0">
-                    <div class="col-xl-8 col-lg-8 col-md-12 mt-4 mb-4">
+                    <div class="col-xl-8 col-lg-8 col-md-12 mt-1 mb-1">
                         <div class="card-body">
                             <h5 class="card-title" th:text="#{about}">За нас:</h5>
-                            <p class="card-text" th:text="#{about.body}">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere hendrerit metus, condimentum iaculis risus accumsan nec. Aliquam pharetra magna diam, eget euismod purus vulputate nec. Cras mattis massa sed blandit venenatis. Curabitur laoreet massa justo, id eleifend ex rhoncus ac. Integer eget interdum eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis luctus ante sed sem auctor, a convallis sem posuere. </p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-12 mt-4 mb-4 ">
+                    <div class="col-xl-4 col-lg-4 col-md-12 mt-1 mb-1">
                         <img src="/images/beach2.jpeg" class="img-fluid rounded-start" alt="...">
                     </div>
                 </div>
             </div>
 
         </section>
-
 
 
 
