--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -83,7 +83,7 @@
 
             <div class="custom-card mb-3">
                 <div class="row g-0">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-2 mb-2">
                         <img src="/images/location.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
