--- a/src/main/resources/templates/pricing_and_availability.html
+++ b/src/main/resources/templates/pricing_and_availability.html
@@ -91,16 +91,18 @@
 
 
 
-        <div class="row ">
+        <div class="row mb-3">
             <div class="container">
-                <div class="calendar row">
-                    <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
-                        <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
-                        <br/>
+                <div class="custom-card">
+                    <div class="calendar row">
+                        <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
+                            <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
+                            <br/>
 
-                        <div class="day" th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
-                             th:text="${day}"
-                             th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
+                            <div class="day " th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
+                                 th:text="${day}"
+                                 th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
+                            </div>
                         </div>
                     </div>
                 </div>
