--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@
 
 
 
-    <section class="main-content container-fluid">
+    <section class="main-content container-fluid pb-5">
 
 <!--        Header image-->
         <section class="content-top container-fluid">
@@ -94,8 +94,8 @@
                 <div class="row g-0">
                     <div class="col-xl-8 col-lg-8 col-md-12 mt-1 mb-1">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="#{about}">За нас:</h5>
-                            <p class="card-text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere hendrerit metus, condimentum iaculis risus accumsan nec. Aliquam pharetra magna diam, eget euismod purus vulputate nec. Cras mattis massa sed blandit venenatis. Curabitur laoreet massa justo, id eleifend ex rhoncus ac. Integer eget interdum eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis luctus ante sed sem auctor, a convallis sem posuere. </p>
+                            <h5 class="card-title" th:text="#{home.card1.title}">За нас:</h5>
+                            <p class="card-text" th:text="#{home.card1.body}"> </p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 mt-1 mb-1">
