--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -45,7 +45,7 @@
 
 
 
-<section class="main-content container-fluid">
+<section class="main-content container-fluid pb-5">
 
     <!--        Header image-->
     <section class="content-top container-fluid">
@@ -82,8 +82,8 @@
         <div class="row">
             <div class="custom-card mb-3">
                 <div class="card-body">
-                    <h3 class="card-title">Снимки:</h3>
-                    <p class="card-text">Кога за последно имахте чувството, че сте "точно на мястото си"? Спомняте ли си усещането: умът е спокоен и ведър, дишате дълбоко и бавно, в областта на сърцето се разлива едва доловима топлина, от слънчевия сплит излизат трептящи нишки, които ви свързват с всичко наоколо... Дали ще се случи точно това – не знаем, но ви каним да поседите край басейна, защитени като в гнездо от каменните къщи зад вас. Обърнете взор на юг към надиплените като шарена копринена кърпа хълмове на Предбалкана, метната сякаш да развесели забилите в небето и в историята чела върхове на Стара планина: Ботев, Триглав, Шипка и Бузлуджа.
+                    <h3 class="card-title" th:text="#{photos.card1.title}">Снимки:</h3>
+                    <p class="card-text" th:text="#{photos.card1.body}">Кога за последно имахте чувството, че сте "точно на мястото си"? Спомняте ли си усещането: умът е спокоен и ведър, дишате дълбоко и бавно, в областта на сърцето се разлива едва доловима топлина, от слънчевия сплит излизат трептящи нишки, които ви свързват с всичко наоколо... Дали ще се случи точно това – не знаем, но ви каним да поседите край басейна, защитени като в гнездо от каменните къщи зад вас. Обърнете взор на юг към надиплените като шарена копринена кърпа хълмове на Предбалкана, метната сякаш да развесели забилите в небето и в историята чела върхове на Стара планина: Ботев, Триглав, Шипка и Бузлуджа.
 
                         Ако можехте да поседите така цяла година, сутрин ще ви будят славеи, а съществото ви ще се разтапя в аромати: на дрян, на бъз, на цъфнали ябълки, на акация, на липа, на малини, на горски ягоди, на мащерка, на диви круши, на натежали от слънце домати, на топла пръст и чубрица, на узрели дюли, на мушмули и мокра шума, на измити от дъжда скали, на скреж и сняг, и на мамещ дим от дъбови цепеници...</p>
                 </div>
