--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -45,7 +45,7 @@
 
 
 
-<section class="main-content container-fluid">
+<section class="main-content container-fluid pb-5">
 
     <!--        Header image-->
     <section class="content-top container-fluid">
@@ -81,11 +81,11 @@
         <div class="row">
             <div class="custom-card mb-3">
                 <div class="card-body">
-                    <h3 class="card-title" >Какво можем да правим в района:</h3>
+                    <h3 class="card-title" th:text="#{attractions.title}">Какво можем да правим в района:</h3>
                     <img src="/images/beach.JPG" class="card-img-top" height="200" alt="...">
 
-                    <h5 class="card-title mt-2" >Плаж Атия</h5>
-                    <p class="card-text">Плаж Атия се намира в близост до нос Атия в община Созопол, област Бургас. Плажът е с дължина от около 3 км. Пясъкът е с жълто-черен цвят, плътен и смесен със златисти люспички. Водата е кристално чиста, а морското дъно е гладко, има лек наклон и е песъчливо. През лятото температурата на водата достига до 25-26 градуса. Плажът е незастроен и почти безлюден, което го прави изключително подходящ за плажуване и риболов.</p>
+                    <h5 class="card-title mt-2" th:text="#{attractions.card1.title}">Плаж Атия</h5>
+                    <p class="card-text" th:text="#{attractions.card1.body}">Плаж атия информация</p>
                 </div>
             </div>
         </div>
@@ -94,19 +94,8 @@
 
             <div class="custom-card">
                 <div class="card-body">
-                    <h5 class="card-title">Местност Бакърлъка</h5>
-                    <p class="card-text">Бакърлъка е защитена местност в България. Намира се в землището на село Равадиново, област Бургас.[1]
-
-                        Защитената местност е с площ 7,21 ha. Обявена е на 15 октомври 2004 г. с цел опазване на естествено местообитание на хагерово лале и съобщества на други защитени и редки растителни видове, забележителен ландшафт и скали. Защитената местност попада в територията на защитената зона от Натура 2000 по директивата за птиците Бакърлъка.[1]
-
-                        В защитената местност се забраняват:
-
-                        строителство, разкриване на кариери и други дейности, които водят до промяна и унищожаване на ландшафта или водния режим на местността;
-                        бране на диви цветя, събиране на билки, кастрене, чупене на клони и увреждане на дърветата;
-                        извеждане на сечи, освен санитарни и отгледни;
-                        провеждане на горскостопански мероприятия през периода 1 февруари - 30 юли;
-                        внасяне на нехарактерни за района растителни и животински видове;
-                        паша на домашни животни.[1]</p>
+                    <h5 class="card-title" th:text="#{attractions.card2.title}">Местност Бакърлъка</h5>
+                    <p class="card-text" th:text="#{attractions.card2.body}">Бакарлък информация</p>
                 </div>
                 <img src="/images/bakurluk.png" class="card-img-bottom mb-3" height="200" alt="...">
             </div>
