--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -45,7 +45,7 @@
 
 
 
-<section class="main-content container-fluid">
+<section class="main-content container-fluid pb-5">
 
     <!--        Header image-->
     <section class="content-top container-fluid">
@@ -76,27 +76,27 @@
         </div>
     </section>
 
-    <section class="about container-sm mt-3 mb-3">
+    <section class="about container-sm mt-3 mb-6">
 
         <div class="row">
 
 
-            <div class="custom-card mb-3">
+            <div class="custom-card">
                 <div class="row g-0">
                     <div class="col-md-4 mt-2 mb-2">
                         <img src="/images/location.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Локация:</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title" th:text="#{location.card1.title}">Локация:</h5>
+                            <p class="card-text" th:text="#{location.card1.body}">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row mb-5">
+        <div class="row">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
             <a th:href="${googleMapsLink}"
