--- a/src/main/resources/templates/pricing_and_availability.html
+++ b/src/main/resources/templates/pricing_and_availability.html
@@ -46,7 +46,7 @@
 </nav>
 
 
-<section class="main-content container-fluid">
+<section class="main-content container-fluid pb-5">
 
     <!--        Header image-->
     <section class="content-top container-fluid">
@@ -83,8 +83,8 @@
         <div class="row">
             <div class="custom-card mb-3">
                 <div class="card-body">
-                    <h3 class="card-title">Цена:</h3>
-                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <h3 class="card-title" th:text="#{pricing.card1.title}">Цена:</h3>
+                    <p class="card-text" th:text="#{pricing.card1.body}">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
             </div>
         </div>
