--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -72,16 +72,18 @@
         </div>
     </div>
 
-    <div class="row mt-3 mb-3">
-        <div class="container">
-            <div class="calendar row">
-                <div class="month col-lg-3 col-md-4 col-sm-6" th:each="entry : ${reservedGrouped}">
-                    <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
-                    <br/>
 
-                    <div class="day" th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
-                         th:text="${day}"
-                         th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
+    <div class="row mb-5 mt-5">
+        <div class="custom-card">
+            <div class="container">
+                <div class="calendar row">
+                    <div class="month col-lg-3 col-md-4 col-sm-6 above" th:each="entry : ${reservedGrouped}">
+                        <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
+                        <br/>
+                        <div class="day " th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
+                             th:text="${day}"
+                             th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
+                        </div>
                     </div>
                 </div>
             </div>
