--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -53,24 +53,24 @@
         <div class="header container-sm mt-3">
             <div class="row">
                 <div class="col">
-                    <a href="/" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{about}">About</a>
+                    <a href="/" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{about}">About</a>
                 </div>
                 <div class="col">
-                    <a href="/attractions" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{attractions}">Attractions</a>
+                    <a href="/attractions" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
                 </div>
                 <div class="col">
-                    <a href="/services" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{services}">Services</a>
-                </div>
-
-                <div class="col">
-                    <a href="/location" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{location}">Location</a>
+                    <a href="/services" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{services}">Services</a>
                 </div>
 
                 <div class="col">
-                    <a href="/pricing" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
+                    <a href="/location" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{location}">Location</a>
+                </div>
+
+                <div class="col">
+                    <a href="/pricing" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                 </div>
                 <div class="col">
-                    <a href="/photos" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{photos}">Photos</a>
+                    <a href="/photos" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{photos}">Photos</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="custom-card mb-3">
                 <div class="card-body">
                     <h3 class="card-title" th:text="#{attractions.title}">Какво можем да правим в района:</h3>
-                    <img src="/images/beach.JPG" class="card-img-top" height="200" alt="...">
+                    <img src="/images/beach.JPG" class="card-img-top above" height="200" alt="...">
 
                     <h5 class="card-title mt-2" th:text="#{attractions.card1.title}">Плаж Атия</h5>
                     <p class="card-text" th:text="#{attractions.card1.body}">Плаж атия информация</p>
@@ -96,8 +96,8 @@
                 <div class="card-body">
                     <h5 class="card-title" th:text="#{attractions.card2.title}">Местност Бакърлъка</h5>
                     <p class="card-text" th:text="#{attractions.card2.body}">Бакарлък информация</p>
+                    <img src="/images/bakurluk.png" class="card-img-bottom mb-3 above" height="200" alt="...">
                 </div>
-                <img src="/images/bakurluk.png" class="card-img-bottom mb-3" height="200" alt="...">
             </div>
         </div>
 
