--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -53,24 +53,24 @@
         <div class="header container-sm mt-3">
             <div class="row">
                 <div class="col">
-                    <a href="/" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{about}">About</a>
+                    <a href="/" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{about}">About</a>
                 </div>
                 <div class="col">
-                    <a href="/attractions" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{attractions}">Attractions</a>
+                    <a href="/attractions" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
                 </div>
                 <div class="col">
-                    <a href="/services" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{services}">Services</a>
-                </div>
-
-                <div class="col">
-                    <a href="/location" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{location}">Location</a>
+                    <a href="/services" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{services}">Services</a>
                 </div>
 
                 <div class="col">
-                    <a href="/pricing" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
+                    <a href="/location" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{location}">Location</a>
+                </div>
+
+                <div class="col">
+                    <a href="/pricing" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                 </div>
                 <div class="col">
-                    <a href="/photos" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" aria-current="page" th:text="#{photos}">Photos</a>
+                    <a href="/photos" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{photos}">Photos</a>
                 </div>
             </div>
         </div>
