added more styles

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,8 +63,8 @@
 
             <div class="header container-sm mt-3">
                 <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
-                        <a href="/" class="btn " aria-current="page" th:text="#{about}">About</a>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2 ">
+                        <a href="/" class="btn selected" aria-current="page" th:text="#{about}">About</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/attractions" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
