--- a/src/main/resources/templates/attractions.html
+++ b/src/main/resources/templates/attractions.html
@@ -81,7 +81,7 @@
             <div class="custom-card mb-3">
                 <div class="card-body">
                     <h3 class="card-title" th:text="#{attractions.title}">Какво можем да правим в района:</h3>
-                    <img src="/images/beach.JPG" class="card-img-top above" height="200" alt="...">
+                    <img src="/images/beach.JPG" class="img card-img-top above" height="200" alt="...">
 
                     <h5 class="card-title mt-2" th:text="#{attractions.card1.title}">Плаж Атия</h5>
                     <p class="card-text" th:text="#{attractions.card1.body}">Плаж атия информация</p>
@@ -95,7 +95,7 @@
                 <div class="card-body">
                     <h5 class="card-title" th:text="#{attractions.card2.title}">Местност Бакърлъка</h5>
                     <p class="card-text" th:text="#{attractions.card2.body}">Бакарлък информация</p>
-                    <img src="/images/bakurluk.png" class="card-img-bottom mb-3 above" height="200" alt="...">
+                    <img src="/images/bakurluk.png" class="img card-img-bottom mb-3 above" height="200" alt="...">
                 </div>
             </div>
         </div>
