--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -81,7 +81,7 @@
             <div class="custom-card">
                 <div class="row g-0">
                     <div class="col-md-4 mt-2 mb-2 above">
-                        <img src="/images/location.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/images/location.jpg" class="img img-fluid " alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
