--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -96,26 +96,26 @@
                 <div class="card-body">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-4">
-                                <img src="/images/ap1.jpg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap1.jpg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/ap2.jpg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap2.jpg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/ap3.jpg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap3.jpg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/ap4.jpeg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap4.jpeg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/ap5.jpeg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap5.jpeg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/ap6.jpg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/ap6.jpg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
-                            <div class="col-4 mt-2">
-                                <img src="/images/atiya.jpg" class="equal-img" alt="..." onclick="openModal(this.src)">
+                            <div class="col-4 mt-3 mb-3">
+                                <img src="/images/atiya.jpg" class="img equal-img" alt="..." onclick="openModal(this.src)">
                             </div>
                         </div>
                     </div>
