--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 mt-1 mb-1 above">
-                        <img src="/images/beach2.jpeg" class="img-fluid rounded-start above" alt="...">
+                        <img src="/images/beach2.jpeg" class="img img-fluid rounded-start above" alt="...">
                     </div>
                 </div>
             </div>
