--- a/src/main/resources/templates/pricing_and_availability.html
+++ b/src/main/resources/templates/pricing_and_availability.html
@@ -53,22 +53,19 @@
 
         <div class="header container-sm mt-3">
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
                     <a href="/" class="btn " aria-current="page" th:text="#{about}">About</a>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
                     <a href="/attractions" class="btn" aria-current="page" th:text="#{attractions}">Attractions</a>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
                     <a href="/services" class="btn" aria-current="page" th:text="#{services}">Services</a>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
                     <a href="/location" class="btn" aria-current="page" th:text="#{location}">Location</a>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
-                    <a href="/pricing" class="btn selected" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
                     <a href="/photos" class="btn" aria-current="page" th:text="#{photos}">Photos</a>
                 </div>
             </div>
