--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -64,19 +64,19 @@
             <div class="header container-sm mt-3">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                        <a href="/attractions" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
+                        <a href="/attractions" class="custom-btn btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                        <a href="/services" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{services}">Services</a>
+                        <a href="/services" class="custom-btn btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{services}">Services</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                        <a href="/location" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{location}">Location</a>
+                        <a href="/location" class="custom-btn btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{location}">Location</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                        <a href="/pricing" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
+                        <a href="/pricing" class="custom-btn btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                        <a href="/photos" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{photos}">Photos</a>
+                        <a href="/photos" class="custom-btn btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{photos}">Photos</a>
                     </div>
                 </div>
             </div>
