--- a/src/main/resources/templates/admin-add.html
+++ b/src/main/resources/templates/admin-add.html
@@ -17,7 +17,19 @@
 
 <h1 th:text="#{add.reservation.panel}">Add Reservation Panel</h1>
 
-<form th:action="@{/admin/reservations}" method="post">
+<form th:action="@{/admin/reservations}" method="post" th:object="${reservation}">
+    <div class="mb-3">
+        <label for="color" th:text="#{color}" class="mt-2 form-label">Color:</label>
+        <input type="color" th:name="color" class="form-control form-control-color" id="color" value="#563d7c" title="Choose your color">
+    </div>
+    <div class="mb-3">
+        <label for="name" class="form-label" th:text="#{name}">Name:</label>
+        <input type="text" id="name" name="name" class="form-control" required>
+    </div>
+    <div class="mb-3">
+        <label for="description" class="form-label" th:text="#{description}">Description:</label>
+        <input type="text" id="description" name="description" class="form-control" required>
+    </div>
     <div class="mb-3">
         <label for="year" class="form-label" th:text="#{year}">Year:</label>
         <input type="number" id="year" name="year" class="form-control" required>
@@ -33,7 +45,7 @@
         <div class="checkbox-grid">
             <div th:each="day : ${#numbers.sequence(1, 31)}">
                 <label>
-                    <input type="checkbox" name="days" th:value="${day}"/>
+                    <input type="checkbox" name="selectedDays" th:value="${day}"/>
                     <span th:text="${day}">1</span>
                 </label>
             </div>
