--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="#{home}">Admin</title>
+    <title th:text="#{admin}">Admin</title>
     <!-- Bootstrap CSS -->
     <!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -66,29 +66,50 @@
 
     </div>
 
-    <div class="row mt-2">
-        <div class="col">
-            <a href="/admin/remove" class="btn btn-danger" aria-current="page" th:text="#{remove.reservation}">Remove Reservation</a>
+
+    <div class="container-fluid custom-card row mt-2">
+        <div class="row" th:if="${reservations != null}" th:each="reservation : ${reservations}">
+            <div class="col-1 above" th:style="|background-color:${reservation.color}|"></div>
+            <div class="col above"
+                 th:text="|${reservation.name} - ${reservation.description}|">
+
+            </div>
+            <div class="col above">
+                <a th:href="@{'/admin/reservations/edit/' + ${reservation.id}}"
+                   class="btn btn-primary"
+                   th:text="#{edit}">Edit</a>
+            </div>
+            <div class="col above">
+                <a th:href="@{'/admin/reservations/delete/' + ${reservation.id}}"
+                   class="btn btn-danger"
+                   th:text="#{delete}">Delete</a>
+            </div>
         </div>
     </div>
 
-
-    <div class="row mb-5 mt-5">
-        <div class="custom-card">
-            <div class="container">
-                <div class="calendar row">
-                    <div class="month col-lg-3 col-md-4 col-sm-6 above" th:each="entry : ${reservedGrouped}">
-                        <strong th:text="${#temporals.format(entry.key.atDay(1), 'MMMM yyyy', locale)}"></strong>
-                        <br/>
-                        <div class="day " th:each="day : ${#numbers.sequence(1, entry.key.lengthOfMonth())}"
-                             th:text="${day}"
-                             th:classappend="${entry.value.contains(day)} ? ' reserved' : ''">
-                        </div>
-                    </div>
+    <div class="admin-calendar custom-card row mt-2">
+        <div class="admin-month col-lg-3 col-md-4 col-sm-6 above"
+             th:each="entry : ${calendarData}">
+            <!-- Display Month-Year -->
+            <strong th:text="${entry.key}"></strong>
+            <br>
+            <!-- Loop over days in this month -->
+            <div class="admin-day" th:each="dayEntry : ${entry.value}">
+                <span th:text="${dayEntry.key}"></span>
+                <!-- Each reservation color for that day -->
+                <div>
+                <span th:each="color : ${dayEntry.value}"
+                      th:style="'display:inline-block;width:14px;height:14px;margin:2px;border-radius:3px;background-color:' + ${color}"
+                      th:title="${color}">
+                </span>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
 
 
 </section>
