--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -54,19 +54,19 @@
         <div class="header container-sm mt-3">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/" class="btn " aria-current="page" th:text="#{about}">About</a>
+                    <a href="/" class="btn custom-btn " aria-current="page" th:text="#{about}">About</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/attractions" class="btn" aria-current="page" th:text="#{attractions}">Attractions</a>
+                    <a href="/attractions" class="btn custom-btn" aria-current="page" th:text="#{attractions}">Attractions</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/services" class="btn" aria-current="page" th:text="#{services}">Services</a>
+                    <a href="/services" class="btn custom-btn" aria-current="page" th:text="#{services}">Services</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/pricing" class="btn" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
+                    <a href="/pricing" class="btn custom-btn" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/photos" class="btn" aria-current="page" th:text="#{photos}">Photos</a>
+                    <a href="/photos" class="btn custom-btn" aria-current="page" th:text="#{photos}">Photos</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
             <a th:href="${googleMapsLink}"
-               class="btn selected" target="_blank">
+               class="btn custom-btn selected" target="_blank">
                 <i class="bi bi-geo-alt-fill" th:text="#{navigate.with.google.maps}"></i>
             </a>
 
