--- a/src/main/resources/templates/photos.html
+++ b/src/main/resources/templates/photos.html
@@ -54,19 +54,19 @@
         <div class="header container-sm mt-3">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/" class="btn " aria-current="page" th:text="#{about}">About</a>
+                    <a href="/" class="btn custom-btn " aria-current="page" th:text="#{about}">About</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/attractions" class="btn" aria-current="page" th:text="#{attractions}">Attractions</a>
+                    <a href="/attractions" class="btn custom-btn" aria-current="page" th:text="#{attractions}">Attractions</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/services" class="btn" aria-current="page" th:text="#{services}">Services</a>
+                    <a href="/services" class="btn custom-btn" aria-current="page" th:text="#{services}">Services</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/location" class="btn" aria-current="page" th:text="#{location}">Location</a>
+                    <a href="/location" class="btn custom-btn" aria-current="page" th:text="#{location}">Location</a>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl">
-                    <a href="/pricing" class="btn" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
+                    <a href="/pricing" class="btn custom-btn" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                 </div>
             </div>
         </div>
